Need to fix the image not showing

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,14 @@
     gap: 2rem;
     width: 70%;
 }
+
+.header-text{
+    font-size: 3rem;
+    font-weight: 800;
+}
+
+.para-text{
+    font-size: 1rem;
+    font-weight: 100;
+
+}
